--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
+    "react-responsive-carousel": "3.1.36",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.4",
