--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "material-ui": "^0.20.0",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
+    "react-render-html": "^0.6.0",
     "react-responsive-carousel": "3.1.36",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
