--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "material-ui": "^0.20.0",
     "react": "16.3.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
     "react-render-html": "^0.6.0",
