--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^4.13.1",
     "material-ui": "^0.20.0",
     "react": "16.3.2",
     "react-bootstrap": "^0.32.1",
@@ -16,6 +17,7 @@
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.4",
+    "react-slick": "^0.23.1",
     "redux": "4.0.0",
     "redux-thunk": "^2.2.0"
   },
