--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
     "react-render-html": "^0.6.0",
-    "react-responsive-carousel": "3.1.36",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.4",
+    "react-slick": "^0.23.1",
     "redux": "4.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {},
   "repository": {
