--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-slick": "^0.23.1",
     "redux": "4.0.0",
     "redux-thunk": "^2.2.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^3.2.6"
   },
   "devDependencies": {},
   "repository": {
