--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "16.3.2",
+    "react-media": "^1.8.0",
     "react-redux": "5.0.7",
     "react-render-html": "^0.6.0",
     "react-router": "4.2.0",
