--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.7",
+    "@fortawesome/fontawesome-free-solid": "^5.0.12",
+    "@fortawesome/react-fontawesome": "0.0.19",
     "axios": "^0.18.0",
     "firebase": "^4.13.1",
     "material-ui": "^0.20.0",
