--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.12",
     "@fortawesome/react-fontawesome": "0.0.19",
     "axios": "^0.18.0",
+    "firebase": "^5.0.1",
     "material-ui": "^0.20.0",
     "react": "16.3.2",
     "react-bootstrap": "^0.32.1",
